# auth/docs/swagger.json
@@ -41,13 +41,13 @@
                 "summary": "Check auth",
                 "responses": {
                     "200": {
-                        "description": "Login responce",
+                        "description": "Login response",
                         "schema": {
                             "$ref": "#/definitions/main.CheckAuthResponse"
                         }
                     },
                     "401": {
-                        "description": "Error responce",
+                        "description": "Error response",
                         "schema": {
                             "$ref": "#/definitions/main.ErrorResponse"
                         }
@@ -106,6 +106,43 @@
                 }
             }
         },
+        "/v1/refresh": {
+            "post": {
+                "security": [
+                    {
+                        "CookieRefreshToken": []
+                    }
+                ],
+                "description": "Refresh access and refresh tokens",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Refresh tokens",
+                "responses": {
+                    "200": {
+                        "description": "Login response",
+                        "schema": {
+                            "$ref": "#/definitions/main.LoginResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Error response",
+                        "schema": {
+                            "$ref": "#/definitions/main.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Error response",
+                        "schema": {
+                            "$ref": "#/definitions/main.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/register": {
             "post": {
                 "description": "Register new user",
@@ -132,25 +169,25 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Login responce",
+                        "description": "Login response",
                         "schema": {
                             "$ref": "#/definitions/main.RegisterResponse"
                         }
                     },
                     "400": {
-                        "description": "Error responce",
+                        "description": "Error response",
                         "schema": {
                             "$ref": "#/definitions/main.ErrorResponse"
                         }
                     },
                     "409": {
-                        "description": "Error responce",
+                        "description": "Error response",
                         "schema": {
                             "$ref": "#/definitions/main.ErrorResponse"
                         }
                     },
                     "500": {
-                        "description": "Error responce",
+                        "description": "Error response",
                         "schema": {
                             "$ref": "#/definitions/main.ErrorResponse"
                         }
@@ -201,10 +238,13 @@
         "main.LoginResponse": {
             "type": "object",
             "properties": {
+                "access_token": {
+                    "type": "string"
+                },
                 "message": {
                     "type": "string"
                 },
-                "token": {
+                "refresh_token": {
                     "type": "string"
                 }
             }
@@ -227,6 +267,14 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "CookieRefreshToken": {
+            "description": "HTTP Only Cookie refresh_token для запроса /v1/refresh",
+            "type": "apiKey",
+            "name": "refresh_token",
+            "in": "header"
         }
     }
 }
